Deal with various zz-application/zz-winassoc-XXX mime types

zz-application is not a valid media type, but unfortunately there are
quite a few mime types out there in the form of
zz-application/zz-winassoc-XXX

This patch makes mimeutils deal with these in 2 different ways:
1) For the "popular" ones (doc and xls) simply accept them
2) For the others, advice the standard mime type for these files

https://bugs.freedesktop.org/show_bug.cgi?id=41286